--- a/theme/button.css
+++ b/theme/button.css
@@ -1,10 +1,4 @@
-.el-button-group:before, .el-button-group:after{
-    display: table;
-    content: "";
-}
-.el-button-group:after{
-    clear: both;
-}@charset "UTF-8";
+@charset "UTF-8";
 :root{
     /* Transition
   -------------------------- */
@@ -456,6 +450,15 @@
 .el-button-group{
     display: inline-block;
     vertical-align: middle;
+}
+
+.el-button-group:before, .el-button-group:after{
+    display: table;
+    content: "";
+}
+
+.el-button-group:after{
+    clear: both;
 }
 
 .el-button-group .el-button--primary{}
